@@ -1,5 +1,14 @@
 2014-01-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[v int] Use "DROP DATABASE IF EXISTS".
+
+	* testing.scm (d/c): Don't take 2nd arg SEVERITY; instead,
+	take REST; use it to construct the command for ‘pg-exec’;
+	if the result is not ‘ok?’ say "FATAL" in the output message.
+	(drop!, fresh!): Update calls to ‘d/c’.
+
+2014-01-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[v int] Make ‘d/c’ take symbols, not strings.
 
 	* testing.scm (d/c): ...here.
